--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -58,42 +58,8 @@
           <!-- Bootstrap JS -->
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-          <script>
-               setTimeout(() => {
-                    const alertNode = document.querySelector(".alert");
-                    if (alertNode) {
-                         alertNode.classList.remove("show");
-                         alertNode.classList.add("fade");
-                         setTimeout(() => alertNode.remove(), 500);
-                    }
-               }, 5000);
-          </script>
+          <script src="/javascripts/alert.js"></script>
 
-          <script>
-               // Example starter JavaScript for disabling form submissions if there are invalid fields
-               (function () {
-                    "use strict";
-
-                    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                    const forms =
-                         document.querySelectorAll(".needs-validation");
-
-                    // Loop over them and prevent submission
-                    Array.from(forms).forEach(function (form) {
-                         form.addEventListener(
-                              "submit",
-                              function (event) {
-                                   if (!form.checkValidity()) {
-                                        event.preventDefault();
-                                        event.stopPropagation();
-                                   }
-
-                                   form.classList.add("was-validated");
-                              },
-                              false
-                         );
-                    });
-               })();
-          </script>
+          <script src="/javascripts/validateForm.js"></script>
      </body>
 </html>
