--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,6 +14,14 @@
                rel="stylesheet"
                href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
           />
+
+          <!-- Leaflet CSS -->
+          <link
+               rel="stylesheet"
+               href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+               integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+               crossorigin=""
+          />
      </head>
      <body class="d-flex flex-column min-vh-100">
           <!-- Navbar -->
@@ -28,15 +36,17 @@
           <!-- Footer -->
           <%- include("../partials/footer") %>
 
-          <!-- Bootstrap JS -->
+          <!-- Bootstrap JS etc -->
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
           <script src="/javascripts/alert.js"></script>
-
           <script src="/javascripts/validateForm.js"></script>
-
           <script src="/javascripts/registerValidation.js"></script>
 
-          <!-- <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script> -->
+          <!-- Leaflet JS -->
+          <script
+               src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+               integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+               crossorigin=""
+          ></script>
      </body>
 </html>
